welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:12: error: reassignment to val
    compteur=compteur+1
            ^