welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas:Int=0
var compteur:Int=0

if (estSurBiscuit()==false){
  avance()
  nbPas=nbPas+1
}
else if (estSurBiscuit()==true){
  prendBiscuit()
  for (compteur <-1 to nbPas){
    recule()
    compteur=compteur+1
  }
}